[package]
name = "block-cipher"
description = "Traits for description of block ciphers"
version = "0.7.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/block-cipher"
repository = "https://github.com/RustCrypto/traits"
keywords = ["crypto", "block-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
generic-array = "0.14"
blobby = { git = "https://github.com/mesalock-linux/rustcrypto-utils-sgx", optional = true }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
default = ["mesalock_sgx"]
dev = ["blobby"]
mesalock_sgx = ["sgx_tstd"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
