[package]
name = "stream-cipher"
description = "Stream cipher traits"
version = "0.4.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/stream-cipher"
repository = "https://github.com/RustCrypto/traits"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
generic-array = "0.14"
blobby = { git = "https://github.com/mesalock-linux/rustcrypto-utils-sgx", optional = true }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dependencies.block-cipher]
version = "0.7"
optional = true
path = "../block-cipher"

[features]
default = ["mesalock_sgx"]
dev = ["blobby"]
mesalock_sgx = ["sgx_tstd"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
